docs 11 natvie components 번역 완료

--- a/@docs-md/document/11_nativeComponents/2.md
+++ b/@docs-md/document/11_nativeComponents/2.md
@@ -1,6 +1,6 @@
 # iOS 네이티브 UI 컴포넌트
 
-최신 앱에서 사용할 수 있는 수많은 기본 UI 위젯이 있습니다. 그 중 일부는 플랫폼에 속해 있으며, 다른 일부는 서드파티 라이브러리로 사용이 가능하지만, 대부분의 위젯이 자체 포트폴리오에서 사용될 수 있습니다. React Native는 `ScrollView`, `TextInput` 과 같이 이미 래핑된 대부분의 핵심적인 플랫폼 컴포넌트들을 일부 가지고 있습니다. 그러나 이전 앱에서 직접 작성한 컴포넌트 등 일부 컴포넌트는 React Native에 포함되어 있지 않습니다. 다행히 이러한 기존 컴포넌트를 React Native 애플리케이션과 매끄럽게 통합할 수 있습니다. 
+최신 앱에서 사용할 수 있는 수많은 네이티브 UI 위젯이 있습니다. 그 중 일부는 플랫폼에 속해 있으며, 다른 일부는 서드파티 라이브러리로 사용이 가능하지만, 대부분의 위젯이 자체 포트폴리오에서 사용될 수 있습니다. React Native는 `ScrollView`, `TextInput` 과 같이 이미 래핑된 대부분의 핵심적인 플랫폼 컴포넌트들을 가지고 있습니다. 그러나 이전 앱에서 직접 작성한 컴포넌트 등 일부 컴포넌트는 React Native에 포함되어 있지 않습니다. 다행히 이러한 기존 컴포넌트를 React Native 애플리케이션과 매끄럽게 통합할 수 있습니다. 
 
 이 가이드는 네이티브 모듈 가이드와 마찬가지로, iOS 프로그래밍에 능숙한 개발자를 대상으로 하는 고급 가이드입니다. 이 가이드에서는 코어 React Native 라이브러리에서 사용할 수 있는 기존의 `MapView` 컴포넌트의 하위를 일부 구현해봄으로써, 네이티브 UI 컴포넌트를 빌드하는 방법에 대해 알아봅니다. 
 
@@ -63,10 +63,9 @@ render() {
 }
 ```
 
-Make sure to use `RNTMap` here. We want to require the manager here, which will expose the view of our manager for use in JavaScript.
-여기에서 `RNTMap`을 사용하십시오. 
+여기에서 `RNTMap`을 사용하십시오. 여기에서 매니저를 요청하면, JavaScript에서 사용할 매니저의 뷰가 expose됩니다. 
 
-**참고:** When rendering, don't forget to stretch the view, otherwise you'll be staring at a blank screen.
+**참고:** 렌더링을 할 때는 뷰를 늘려야 합니다. 그렇지 않으면 빈 화면이 나타납니다. 
 
 ```jsx
   render() {
@@ -74,27 +73,28 @@ Make sure to use `RNTMap` here. We want to require the manager here, which will 
   }
 ```
 
-This is now a fully-functioning native map view component in JavaScript, complete with pinch-zoom and other native gesture support. We can't really control it from JavaScript yet, though :(
+이제 JavaScript에서 완벽하게 작동하는 네이티브 맵 뷰 컴포넌트가 완성되었습니다. 핀치-줌과 다른 네이티브 제스쳐들을 지원합니다. 하지만 아직 JavaSCript에서 실제로 제어할 수는 없습니다 :(
 
 ## 속성 (Properties)
 
-The first thing we can do to make this component more usable is to bridge over some native properties. Let's say we want to be able to disable zooming and specify the visible region. Disabling zoom is a boolean, so we add this one line:
+이 컴포넌트의 사용성을 더 좋게 만들기 위해서 할 수 있는 첫 번째 방법은 일부 네이티브 속성들을 연결하는 것입니다. 확대/축소 기능을 비활성화하고, 표시되는 영역을 지정할 수 있다고 가정해 보겠습니다. 확대/축소 비활성화는 boolean 타입이므로, 다음 한 줄을 추가합니다. 
+
 
 ```swift
 // RNTMapManager.m
 RCT_EXPORT_VIEW_PROPERTY(zoomEnabled, BOOL)
 ```
 
-Note that we explicitly specify the type as `BOOL` - React Native uses `RCTConvert` under the hood to convert all sorts of different data types when talking over the bridge, and bad values will show convenient "RedBox" errors to let you know there is an issue ASAP. When things are straightforward like this, the whole implementation is taken care of for you by this macro.
+위와 같이 명시적으로 `BOOL` 타입을 지정합니다. React Native는 브릿지를 통해 소통할 때, 엔진 내부에서 `RCTConvert`를 사용해 모든 타입의 데이터들을 변환합니다. 그리고 잘못된 값들에는 "빨간 상자" 오류가 표시되어, 문제가 있다는 것을 바로 알 수 있습니다. 이처럼 단순한 경우에는 전체 구현이 이 매트로를 통해 처리됩니다. 
 
-Now to actually disable zooming, we set the property in JS:
+이제 실제로 확대/축소를 비활성화하기 위해서, JS에서 속성을 설정합니다. 
 
 ```jsx
 // MyApp.js
 <MapView zoomEnabled={false} style={{ flex: 1 }} />
 ```
 
-To document the properties (and which values they accept) of our MapView component we'll add a wrapper component and document the interface with React `PropTypes`:
+MapView 컴포넌트의 프로퍼티(그리고 해당 프로퍼티가 받는 인자)을 문서화하려면, 래퍼 컴포넌트를 추가하고 React `PropTypes`로 인터페이스를 문서화합니다. 
 
 ```jsx
 // MapView.js
@@ -110,8 +110,8 @@ class MapView extends React.Component {
 
 MapView.propTypes = {
   /**
-   * A Boolean value that determines whether the user may use pinch
-   * gestures to zoom in and out of the map.
+   * 사용자가 핀치 제스쳐를 사용해 
+   * 맵을 확대/축소할 수 있는지 여부를 나타내는 Boolean 값. 
    */
   zoomEnabled: PropTypes.bool
 };
@@ -121,9 +121,9 @@ var RNTMap = requireNativeComponent('RNTMap');
 module.exports = MapView;
 ```
 
-Now we have a nicely documented wrapper component to work with.
+이제 문서화가 잘 이루어진 래퍼 컴포넌트를 작업에 사용할 수 있습니다. 
 
-Next, let's add the more complex `region` prop. We start by adding the native code:
+다음으로, 더 복잡한 `region` prop을 추가해 보겠습니다. 먼저 네이티브 코드를 추가합니다. 
 
 ```swift
 // RNTMapManager.m
@@ -133,9 +133,9 @@ RCT_CUSTOM_VIEW_PROPERTY(region, MKCoordinateRegion, MKMapView)
 }
 ```
 
-Ok, this is more complicated than the `BOOL` case we had before. Now we have a `MKCoordinateRegion` type that needs a conversion function, and we have custom code so that the view will animate when we set the region from JS. Within the function body that we provide, `json` refers to the raw value that has been passed from JS. There is also a `view` variable which gives us access to the manager's view instance, and a `defaultView`that we use to reset the property back to the default value if JS sends us a null sentinel.
+자, `BOOL` 보다 더 복잡해졌습니다. 이제 변환 함수가 필요한 `MKCoordinateRegion` 타입이 있고, JS에서 region을 설정할 때 뷰가 애니메이션되도록, 필요한 사용자 정의 코드도 있습니다. 함수의 body 부분에서 `json`은 JS에서 전달 된 원시 값을 의미합니다. 매니저 뷰 인스턴스에 대한 접근 권한을 제공하는 `view` 변수도 있습니다. 또한 JS에서 NULL Sentinel을 보냈을 때 속성을 다시 기본값으로 되돌리는 `defaultView` 변수도 있습니다. 
 
-You could write any conversion function you want for your view - here is the implementation for `MKCoordinateRegion` via a category on `RCTConvert`. It uses an already existing category of ReactNative `RCTConvert+CoreLocation`:
+뷰에 사용할 변환 함수를 직접 작성할 수 있습니다. 다음은 `RCTConvert` 카테고리를 통해 `MKCoordinateRegion`를 구현한 것입니다. 이는 기존의 ReactNative `RCTConvert+CoreLocation` 카테고리를 사용합니다. 
 
 ```swift
 // RNTMapManager.m
@@ -178,36 +178,34 @@ You could write any conversion function you want for your view - here is the imp
 @end
 ```
 
-These conversion functions are designed to safely process any JSON that the JS might throw at them by displaying "RedBox" errors and returning standard initialization values when missing keys or other developer errors are encountered.
+이러한 변환 함수는, 키가 누락되었거나 다른 개발자 오류가 발생할 때, "빨간 상자" 오류를 보여주거나 표준 초기화 값을 반환함으로써 JS에서 던질 수 있는 모든 JSON을 안전하게 처리하도록 설계되었습니다. 
 
-To finish up support for the `region` prop, we need to document it in `propTypes`:
+`region` prop에 대한 지원을 완료하려면, 이를 `propTypes` 안에 문서화해야 합니다. 
 
 ```jsx
 // MapView.js
 
 MapView.propTypes = {
   /**
-   * A Boolean value that determines whether the user may use pinch
-   * gestures to zoom in and out of the map.
+   * 사용자가 핀치 제스쳐를 사용해 
+   * 맵을 확대/축소할 수 있는지 여부를 나타내는 Boolean 값. 
    */
   zoomEnabled: PropTypes.bool,
 
   /**
-   * The region to be displayed by the map.
+   * 맵에 의해 표시되는 영역(region). 
    *
-   * The region is defined by the center coordinates and the span of
-   * coordinates to display.
+   * 영역(region)은 표시할 좌표의 범위와 중심 좌표에 의해 정의됩니다.  
    */
   region: PropTypes.shape({
     /**
-     * Coordinates for the center of the map.
+     * 맵 중앙의 좌표.
      */
     latitude: PropTypes.number.isRequired,
     longitude: PropTypes.number.isRequired,
 
     /**
-     * Distance between the minimum and the maximum latitude/longitude
-     * to be displayed.
+     * 최소 및 최대 위도/경도 사이의 거리가 표시됩니다. 
      */
     latitudeDelta: PropTypes.number.isRequired,
     longitudeDelta: PropTypes.number.isRequired,
@@ -233,13 +231,14 @@ render() {
 }
 ```
 
-Here you can see that the shape of the region is explicit in the JS documentation.
+JS 문서에서 영역(region)의 형태가 명시되어 있음을 확인할 수 있습니다. 
 
-## Events[#](https://reactnative.dev/docs/native-components-ios#events)
 
-So now we have a native map component that we can control freely from JS, but how do we deal with events from the user, like pinch-zooms or panning to change the visible region?
+## 이벤트
 
-Until now we've only returned a `MKMapView` instance from our manager's `-(UIView *)view` method. We can't add new properties to `MKMapView` so we have to create a new subclass from `MKMapView` which we use for our View. We can then add a `onRegionChange` callback on this subclass:
+이제 JS에서 자유롭게 제어할 수 있는 네이티브 맵 컴포넌트를 만들었습니다. 그런데 핀치 줌이나 패닝과 같이 보이는 영역을 변경하기 위한 사용자 이벤트들은 어떻게 처리할 수 있을까요? 
+
+지금까지는 매니저의 `-(UIView *)view` 메소드로 `MKMapView` 인스턴스를 반환한 것이 전부입니다. `MKMapView`에는 새로운 속성을 추가할 수 없으므로, 뷰에 사용할 새로운 `MKMapView` 하위 클래스를 추가해야 합니다. 그런 다음 이 하위 클래스에 `onRegionChange` 콜백을 추가할 수 있습니다. 
 
 ```swift
 // RNTMapView.h
@@ -263,7 +262,7 @@ Until now we've only returned a `MKMapView` instance from our manager's `-(UIVie
 @end
 ```
 
-Note that all `RCTBubblingEventBlock` must be prefixed with `on`. Next, declare an event handler property on `RNTMapManager`, make it a delegate for all the views it exposes, and forward events to JS by calling the event handler block from the native view.
+모든 `RCTBubblingEventBlock`에는 `on` 접두사가 붙어야 합니다. 다음으로 `RNTMapManager`에 이벤트 핸들러 속성을 선언하고, 이 클래스가 노출하는 모든 뷰를 위임하도록 만든 다음, 네이티브 뷰에서 이벤트 핸들러 블록을 호출함으로써 JS에 이벤트를 전달합니다. 
 
 ```swift
 // RNTMapManager.m
@@ -317,7 +316,7 @@ RCT_CUSTOM_VIEW_PROPERTY(region, MKCoordinateRegion, MKMapView)
 @end
 ```
 
-In the delegate method `-mapView:regionDidChangeAnimated:` the event handler block is called on the corresponding view with the region data. Calling the `onRegionChange` event handler block results in calling the same callback prop in JavaScript. This callback is invoked with the raw event, which we typically process in the wrapper component to simplify the API:
+대리자 메소드 `-mapView:regionDidChangeAnimated:`안에서 이벤트 핸들러 블록은 영역 데이터에 상응하는 뷰에서 호출됩니다. `onRegionChange` 이벤트 핸들러 블록을 호출하면 JavaScript에서 동일한 콜백 prop이 호출됩니다. 이 콜백은 일반적으로 API를 단순화하기 위해 래퍼 컴포넌트에서 처리하는 원시 이벤트와 함께 호출됩니다. 
 
 ```jsx
 // MapView.js
@@ -373,9 +372,9 @@ class MyApp extends React.Component {
 }
 ```
 
-## Handling multiple native views[#](https://reactnative.dev/docs/native-components-ios#handling-multiple-native-views)
+## 여러 개의 네이티브 뷰 처리하기
 
-A React Native view can have more than one child view in the view tree eg.
+React Native 뷰는 다음 예시와 같이 뷰 트리에 하나 이상의 자식 뷰를 가질 수 있습니다. 
 
 ```jsx
 <View>
@@ -385,9 +384,9 @@ A React Native view can have more than one child view in the view tree eg.
 </View>
 ```
 
-In this example, the class `MyNativeView` is a wrapper for a `NativeComponent` and exposes methods, which will be called on the iOS platform. `MyNativeView` is defined in `MyNativeView.ios.js` and contains proxy methods of `NativeComponent`.
+위 예시에서, `MyNativeView` 클래스는 `NativeComponent`의 래퍼이며, iOS 플랫폼에서 호출될 메소드들을 expose합니다. `MyNativeView`는 `MyNativeView.ios.js`에서 정의되며, `NativeComponent`의 프록시 메소드를 포함합니다. 
 
-When the user interacts with the component, like clicking the button, the `backgroundColor` of `MyNativeView` changes. In this case `UIManager` would not know which `MyNativeView` should be handled and which one should change `backgroundColor`. Below you will find a solution to this problem:
+사용자가 버튼을 클릭하는 등 컴포넌트와 상호 작용할 때, `MyNativeView`의 `backgroundColor`가 변경됩니다. 이 경우 `UIManager`는 어떤 `MyNativeView`가 처리되어야 할지, 어떤 뷰의 `backgroundColor`가 변경되어야 할지 알 수 없습니다. 아래에서 이 문제에 대한 해결책을 찾을 수 있습니다. 
 
 ```jsx
 <View>
@@ -401,9 +400,10 @@ When the user interacts with the component, like clicking the button, the `backg
 </View>
 ```
 
-Now the above component has a reference to a particular `MyNativeView` which allows us to use a specific instance of `MyNativeView`. Now the button can control which `MyNativeView` should change its `backgroundColor`. In this example let's assume that `callNativeMethod` changes `backgroundColor`.
+이제 위 컴포넌트는 특정한 `MyNativeView`에 대한 참조를 가지고 있어, `MyNativeView`의 특정 인스턴스를 사용할 수 있습니다. 버튼은 어떤 `MyNativeView`의 `backgroundColor`를 변경해야 할지 제어할 수 있게 되었습니다. 이 예에서는 `callNativeMethod`가 `backgroundColor`를 바꾼다고 
+가정해 봅시다. 
 
-`MyNativeView.ios.js` contains code as follow:
+`MyNativeView.ios.js`에는 다음 코드가 포함되어 있습니다. 
 
 ```jsx
 class MyNativeView extends React.Component {
@@ -422,11 +422,11 @@ class MyNativeView extends React.Component {
 }
 ```
 
-`callNativeMethod` is our custom iOS method which for example changes the `backgroundColor` which is exposed through `MyNativeView`. This method uses `UIManager.dispatchViewManagerCommand` which needs 3 parameters:
+`callNativeMethod`는 (예를 들어 `MyNativeView`를 통해 노출되는 `backgroundColor`를 변경하는) 사용자 정의 iOS 메소드입니다. 이 메소드는 3개의 파라미터를 필요로 하는 `UIManager.dispatchViewManagerCommand`를 사용합니다. 
 
-- `(nonnull NSNumber \*)reactTag`  -  id of react view.
-- `commandID:(NSInteger)commandID`  -  Id of the native method that should be called
-- `commandArgs:(NSArray<id> \*)commandArgs`  -  Args of the native method that we can pass from JS to native.
+- `(nonnull NSNumber \*)reactTag`  -  Id 또는 리액트 뷰
+- `commandID:(NSInteger)commandID`  -  호출되어야 하는 네이티브 메소드의 Id
+- `commandArgs:(NSArray<id> \*)commandArgs`  -  JS에서 네이티브로 전달할 수 있는 네이티브 메소드의 인자들.
 
 `RNCMyNativeViewManager.m`
 
@@ -448,11 +448,12 @@ RCT_EXPORT_METHOD(callNativeMethod:(nonnull NSNumber*) reactTag) {
 }
 ```
 
-Here the `callNativeMethod` is defined in the `RNCMyNativeViewManager.m` file and contains only one parameter which is `(nonnull NSNumber*) reactTag`. This exported function will find a particular view using `addUIBlock` which contains the `viewRegistry`parameter and returns the component based on `reactTag` allowing it to call the method on the correct component.
+여기서 `callNativeMethod`는 `RNCMyNativeViewManager.m` 파일에 정의되어 있으며, 단 하나의 매개변수인 `(nonnull NSNumber*) reactTag`를 포함합니다. 이 함수는 `addUIBlock`을 사용해 특정한 뷰를 찾습니다. `addUIBlock`은 `viewRegistry` 파라미터를 포함하고, 정확한 컴포넌트에서 메소드를 호출할 수 있도록 하는 `reactTag` 기반 컴포넌트를 반환합니다. 
 
-## Styles[#](https://reactnative.dev/docs/native-components-ios#styles)
+## 스타일
 
-Since all our native react views are subclasses of `UIView`, most style attributes will work like you would expect out of the box. Some components will want a default style, however, for example `UIDatePicker` which is a fixed size. This default style is important for the layout algorithm to work as expected, but we also want to be able to override the default style when using the component. `DatePickerIOS` does this by wrapping the native component in an extra view, which has flexible styling, and using a fixed style (which is generated with constants passed in from native) on the inner native component:
+모든 기본 네이티브 뷰가 `UIView`의 하위 클래스이기 때문에, 대부분의 스타일 속성은 즉시 예상대로 작동합니다. 그러나 일부 컴포넌트에는 기본 스타일을 적용하고 싶을 수도 있습니다. (예: 고정된 크기를 가진 `UIDatePicker`). 이러한 기본 스타일은 레이아웃 알고리즘이 예상대로 작동되도록 하는 데 있어서 중요하지만, 컴포넌트를 사용할 때 기본 스타일을 재정의할 수도 있어야 합니다. 
+`DatePickerIOS`는 유연한 스타일을 가진 추가 뷰에서 네이티브 컴포넌트를 래핑하고, 내부 네이티브 컴포넌트에서 고정된 스타일(네이티브로부터 전달받은 상수를 통해 생성됨)을 사용함으로써 이를 수행합니다. 
 
 ```jsx
 // DatePickerIOS.ios.js
@@ -481,7 +482,7 @@ var styles = StyleSheet.create({
 });
 ```
 
-The `RCTDatePickerIOSConsts` constants are exported from native by grabbing the actual frame of the native component like so:
+`RCTDatePickerIOSConsts` 상수는 네이티브 컴포넌트의 실제 프레임을 캡쳐하여 네이티브에서 내보내집니다. 
 
 ```swift
 // RCTDatePickerManager.m
@@ -503,4 +504,4 @@ The `RCTDatePickerIOSConsts` constants are exported from native by grabbing the 
 }
 ```
 
-This guide covered many of the aspects of bridging over custom native components, but there is even more you might need to consider, such as custom hooks for inserting and laying out subviews. If you want to go even deeper, check out the [source code](https://github.com/facebook/react-native/blob/master/React/Views) of some of the implemented components.
+이 가이드에서는 사용자 정의 네이티브 컴포넌트를 연결하는 다양한 방법에 대해 알아보았습니다. 그러나 하위 뷰를 삽입하고 배치하기 위한 사용자 정의 훅(hooks)과 같이, 더 많은 것들을 고려해야할 수도 있습니다. 더 자세히 알아보려면, 구현된 컴포넌트의 일부 [소스 코드](https://github.com/facebook/react-native/blob/master/React/Views)를 확인해보십시오. 
