docs > guides (android) 번역 완료

--- a/@docs-md/document/12_guidesAndroid/1.md
+++ b/@docs-md/document/12_guidesAndroid/1.md
@@ -1,10 +1,10 @@
 # Headless JS
 
-Headless JS is a way to run tasks in JavaScript while your app is in the background. It can be used, for example, to sync fresh data, handle push notifications, or play music.
+Headless JS는 앱이 백그라운드에 있는 동안 JavaScript에서 작업을 실행하는 방법입니다. 예를 들어, 새 데이터를 동기화하거나, 푸시 알림을 처리하거나, 음악을 재생하는 데 사용할 수 있습니다. 
 
-## The JS API[#](https://reactnative.dev/docs/headless-js-android#the-js-api)
+## JS API
 
-A task is an async function that you register on `AppRegistry`, similar to registering React applications:
+이 작업은 `AppRegistry` 에 등록하는 비동기 함수로, React 애플리케이션을 등록하는 것과 유사합니다. 
 
 ```jsx
 import { AppRegistry } from 'react-native';
@@ -13,7 +13,7 @@ AppRegistry.registerHeadlessTask('SomeTaskName', () =>
 );
 ```
 
-Then, in `SomeTaskName.js`:
+그리고 `SomeTaskName.js`에 다음 내용을 추가합니다. 
 
 ```jsx
 module.exports = async (taskData) => {
@@ -21,11 +21,11 @@ module.exports = async (taskData) => {
 };
 ```
 
-You can do anything in your task such as network requests, timers and so on, as long as it doesn't touch UI. Once your task completes (i.e. the promise is resolved), React Native will go into "paused" mode (unless there are other tasks running, or there is a foreground app).
+UI를 건드리지 않는 한, 네트워크 요청, 타이머 등 모든 작업을 수행할 수 있습니다. 작업이 완료되면 (즉, Promise가 resolved되면), React Native는 "일시 중지" 모드로 전환됩니다 (다른 작업이 실행 중이거나 포그라운드 앱이 없는 경우). 
 
-## The Java API[#](https://reactnative.dev/docs/headless-js-android#the-java-api)
+## Java API
 
-Yes, this does still require some native code, but it's pretty thin. You need to extend `HeadlessJsTaskService` and override `getTaskConfig`, e.g.:
+물론 아직 네이티브 코드가 필요하긴 하지만, 상당히 짧습니다. `HeadlessJsTaskService` 를 확장하고 `getTaskConfig` 를 재정의해야 합니다. 
 
 ```java
 package com.your_application_name;
@@ -54,15 +54,15 @@ public class MyTaskService extends HeadlessJsTaskService {
 }
 ```
 
-Then add the service to your `AndroidManifest.xml` file:
+그런 다음 `AndroidManifest.xml` 파일에 service를 추가합니다. 
 
 ```xml
 <service android:name="com.example.MyTaskService" />
 ```
 
-Now, whenever you [start your service](https://developer.android.com/reference/android/content/Context.html#startService(android.content.Intent)), e.g. as a periodic task or in response to some system event / broadcast, JS will spin up, run your task, then spin down.
+이제 서비스를 시작할 때마다 (정기적인 작업으로, 또는 몇몇 시스템 이벤트 / 브로드캐스트에 대한 응답으로), JS는 스핀업, 실행, 스핀다운을 수행하게 됩니다. 
 
-Example:
+예시: 
 
 ```java
 Intent service = new Intent(getApplicationContext(), MyTaskService.class);
@@ -74,11 +74,11 @@ service.putExtras(bundle);
 getApplicationContext().startService(service);
 ```
 
-## Retries
+## 재시도 (Retries)
 
-By default, the headless JS task will not perform any retries. In order to do so, you need to create a `HeadlessJsRetryPolicy` and throw a specific `Error`.
+기본적으로, 헤드리스 JS 작업은 리트라이를 수행하지 않습니다. 리트라이를 하려면 `HeadlessJsRetryPolicy` 를 생성해 특정한 `Error` 를 던져야 합니다. 
 
-`LinearCountingRetryPolicy` is an implementation of `HeadlessJsRetryPolicy` that allows you to specify a maximum number of retries with a fixed delay between each attempt. If that does not suit your needs then you can implement your own `HeadlessJsRetryPolicy`. These policies can be passed as an extra argument to the `HeadlessJsTaskConfig` constructor, e.g.
+`LinearCountingRetryPolicy`은 각 시도 사이에 일정한 지연으로 최대 리트라이 횟수를 지정할 수 있는  `HeadlessJsRetryPolicy`를 구현한 것입니다. 앱에 사용하기 적합하지 않다면, 직접 `HeadlessJsRetryPolicy`를 구현할 수도 있습니다. 이러한 정책은 예를 들어 `HeadlessJsTaskConfig` 생성자에 대한 추가 인자로 전달될 수 있습니다. 
 
 ```java
 HeadlessJsRetryPolicy retryPolicy = new LinearCountingRetryPolicy(
@@ -95,9 +95,9 @@ return new HeadlessJsTaskConfig(
 );
 ```
 
-A retry attempt will only be made when a specific `Error` is thrown. Inside a headless JS task, you can import the error and throw it when a retry attempt is required.
+리트라이 시도는 특정 `Error` 가 발생한 경우에만 수행됩니다. 리트라이 시도가 필요할 때, 헤드리스 JS 작업 내에서 오류를 가져와 throw할 수 있습니다. 
 
-Example:
+예시:
 
 ```jsx
 import {HeadlessJsTaskError} from 'HeadlessJsTask';
@@ -110,19 +110,19 @@ module.exports = async (taskData) => {
 };
 ```
 
-If you wish all errors to cause a retry attempt, you will need to catch them and throw the above error.
+모든 오류가 리트라이 시도를 발생시키게 하려면, 해당 오류를 catch하여 위의 오류를 throw해야 합니다. 
 
-## Caveats[#](https://reactnative.dev/docs/headless-js-android#caveats)
+## 주의사항
 
-- The function passed to `setTimeout` does not always behave as expected. Instead the function is called only when the application is launched again. If you only need to wait, use the retry functionality.
-- By default, your app will crash if you try to run a task while the app is in the foreground. This is to prevent developers from shooting themselves in the foot by doing a lot of work in a task and slowing the UI. You can pass a fourth `boolean` argument to control this behaviour.
-- If you start your service from a `BroadcastReceiver`, make sure to call `HeadlessJsTaskService.acquireWakeLockNow()` before returning from `onReceive()`.
+- `setTimeout` 에 전달된 함수가 항상 예상대로 동작하지는 않습니다. 대신 이 함수는 애플리케이션이 다시 시작될 때만 호출됩니다. 기다리기만 하면 되는 경우에 리트라이 기능을 사용하십시오. 
+- 기본적으로, 앱이 포그라운드에 있는 동안 작업을 실행하려고 하면 앱이 중단됩니다. 이는 개발자들이 작업에서 많은 일을 하고 UI가 느려지게 하는 등 스스로 발등을 찍는 행동을 하지 않게 하기 위해서 입니다. 이 동작을 제어하려면 네번째 `boolean` 인자를 전달하면 됩니다. 
+- `BroadcastReceiver`에서 서비스를 시작하려면, `onReceive()`를 반환하기 전에 `HeadlessJsTaskService.acquireWakeLockNow()`를 호출해야 합니다. 
 
-## Example Usage[#](https://reactnative.dev/docs/headless-js-android#example-usage)
+## 사용 예시
 
-Service can be started from Java API. First you need to decide when the service should be started and implement your solution accordingly. Here is an example that reacts to network connection change.
+Java API에서 서비스를 시작할 수 있습니다. 먼저 서비스 시작 시기를 결정하고, 그에 맞게 솔루션을 구현해야 합니다. 다음은 네트워크 연결 변경에 대응하는 예시입니다. 
 
-Following lines shows part of Android manifest file for registering broadcast receiver.
+다음은 브로드캐스트 수신기를 등록하기 위한 Android 매니페스트 파일의 일부입니다. 
 
 ```xml
 <receiver android:name=".NetworkChangeReceiver" >
@@ -132,7 +132,7 @@ Following lines shows part of Android manifest file for registering broadcast re
 </receiver>
 ```
 
-Broadcast receiver then handles intent that was broadcasted in onReceive function. This is a great place to check whether your app is on foreground or not. If app is not on foreground we can prepare our intent to be started, with no information or additional information bundled using `putExtra` (keep in mind bundle can handle only parcelable values). In the end service is started and wakelock is acquired.
+그런 다음 브로드캐스트 수신기는 onReceive 함수에서 브로드캐스팅된 intent를 처리합니다. 이는 앱이 포그라운드에 있는지 여부를 확인할 수 있는 좋은 방법입니다. 앱이 포그라운드에 없는 경우 `putExtra`를 사용하여 번들로 제공되는 정보나 추가 정보 없이 시작하려는 intent를 준비할 수 있습니다 (번들은 파싱 가능한 값으로만 처리할 수 있다는 점에 주의하십시오). 최종적으로 서비스가 시작되고, wakelock이 취득됩니다. 
 
 ```java
 public class NetworkChangeReceiver extends BroadcastReceiver {
