docs: environment setup Titles 수정(번역 및 링크제거)

--- a/@docs-md/document/2_environmentSetup/1-2_2.md
+++ b/@docs-md/document/2_environmentSetup/1-2_2.md
@@ -16,17 +16,17 @@
 
 지침은 개발 운영 체제 및 iOS 또는 Android 용 개발을 시작할지 여부에 따라 약간 다릅니다. Android와 iOS 공용으로 개발하고 싶다면 괜찮습니다. 설정이 약간 다르기 때문에 어떤 것을 시작할지 하나를 선택할 수 있습니다.
 
-#### 개발 OS[#](https://reactnative.dev/docs/environment-setup#development-os): macOS
+#### 개발 OS: macOS
 
-#### 타겟 OS[#](https://reactnative.dev/docs/environment-setup#target-os): iOS
+#### 타겟 OS: iOS
 
-## Installing dependencies[#](https://reactnative.dev/docs/environment-setup#installing-dependencies)
+## 종속성 설치하기
 
 Node, Watchman, React Native command line 인터페이스, Xcode 및 CocoaPods가 필요합니다.
 
 선택한 편집기를 사용하여 앱을 개발할 수 있지만 iOS 용 React Native 앱을 빌드하는 데 필요한 도구를 설정하려면 Xcode를 설치해야합니다.
 
-### Node & Watchman[#](https://reactnative.dev/docs/environment-setup#node--watchman)
+### Node 및 Watchman
 
 [Homebrew](http://brew.sh/)를 사용하여 Node 및 Watchman을 설치하는 것이 좋습니다. Homebrew를 설치 한 후 터미널에서 다음 명령을 실행하십시오:
 
@@ -39,23 +39,23 @@ brew install watchman
 
 [Watchman](https://facebook.github.io/watchman)은 파일 시스템의 변경 사항을 감시하기위한 Facebook 도구입니다. 더 나은 성능을 위해 설치하는 것이 좋습니다.
 
-### Xcode[#](https://reactnative.dev/docs/environment-setup#xcode)
+### Xcode
 
 Xcode를 설치하는 가장 쉬운 방법은 [Mac App Store](https://itunes.apple.com/us/app/xcode/id497799835?mt=12)를 사용하는 것입니다. Xcode를 설치하면 iOS 시뮬레이터와 iOS 앱을 빌드하는 데 필요한 모든 도구도 설치됩니다.
 
 시스템에 Xcode를 이미 설치 한 경우 버전 10 이상인지 확인하십시오.
 
-#### Command Line Tools[#](https://reactnative.dev/docs/environment-setup#command-line-tools)
+#### 명령 행 도구
 
 Xcode Command Line 도구도 설치해야합니다. Xcode를 연 다음 Xcode 메뉴에서 "Preferences..."을 선택합니다. 위치 패널로 이동하고 Command Line 도구 드롭 다운에서 최신 버전을 선택하여 도구를 설치합니다.
 
 ![Xcode Command Line Tools](https://reactnative.dev/assets/images/GettingStartedXcodeCommandLineTools-8259be8d3ab8575bec2b71988163c850.png)
 
-#### Installing an iOS Simulator in Xcode[#](https://reactnative.dev/docs/environment-setup#installing-an-ios-simulator-in-xcode)
+#### Xcode에서 iOS Simulator 설치하기
 
 시뮬레이터를 설치하려면 **Xcode > Preferences...** 를 열고 **Components** 탭을 선택합니다. 사용하려는 iOS 버전이있는 시뮬레이터를 선택하십시오.
 
-#### CocoaPods[#](https://reactnative.dev/docs/environment-setup#cocoapods)
+#### CocoaPods
 
 [CocoaPods](https://cocoapods.org/)는 Ruby로 빌드되었으며 macOS에서 사용할 수있는 기본 Ruby로 설치할 수 있습니다. Ruby 버전 관리자를 사용할 수 있지만 수행중인 작업을 모르는 경우 macOS에서 사용할 수있는 표준 Ruby를 사용하는 것이 좋습니다.
 
@@ -67,10 +67,11 @@ sudo gem install cocoapods
 
 더 많은 정보는 [CocoaPods Getting Started guide](https://guides.cocoapods.org/using/getting-started.html)를 참고하세요.
 
-### React Native Command Line Interface[#](https://reactnative.dev/docs/environment-setup#react-native-command-line-interface)
+### React Native 명령 행 도구
 
 React Native에는 기본 제공 command line 인터페이스가 있습니다. CLI의 특정 버전을 전역적으로 설치하고 관리하는 대신 Node.js와 함께 제공되는 `npx`를 사용하여 런타임에 현재 버전에 액세스하는 것이 좋습니다. `npx react-native <command>`를 사용하면 명령이 실행될 때 현재 안정된 버전의 CLI가 다운로드되고 실행됩니다.
-## Creating a new application[#](https://reactnative.dev/docs/environment-setup#creating-a-new-application)
+
+## 새 애플리케이션 생성하기
 
 > 이전에 글로벌 `react-native-cli` 패키지를 설치 한 경우 예기치 않은 문제가 발생할 수 있으므로 제거하십시오.
 
@@ -82,7 +83,7 @@ npx react-native init AwesomeProject
 
 React Native를 기존 애플리케이션에 통합하거나 Expo에서 "ejected"한 경우 또는 기존 React Native 프로젝트에 Android 지원을 추가하는 경우에는 필요하지 않습니다. ([Integration with Existing Apps](https://reactnative.dev/docs/integration-with-existing-apps)를 참고하세요.) [Ignite CLI](https://github.com/infinitered/ignite)와 같은 타사 CLI를 사용하여 React Native 앱을 초기화 할 수도 있습니다.
 
-### [Optional] Using a specific version or template[#](https://reactnative.dev/docs/environment-setup#optional-using-a-specific-version-or-template)
+### [선택] 특정한 버전이나 템플릿 사용하기
 
 특정 React Native 버전으로 새 프로젝트를 시작하려면 `--version` 인수를 사용할 수 있습니다:
 
@@ -98,9 +99,9 @@ npx react-native init AwesomeTSProject --template react-native-template-typescri
 
 > **참고** 위 명령이 실패하면 이전 버전의 `react-native` 또는 `react-native-cli`가 PC에 전역적으로 설치되어있을 수 있습니다. cli를 제거하고 `npx`를 사용하여 cli를 실행하십시오.
 
-## Running your React Native application[#](https://reactnative.dev/docs/environment-setup#running-your-react-native-application)
+## React Native 애플리케이션 실행하기
 
-### Step 1: Start Metro[#](https://reactnative.dev/docs/environment-setup#step-1-start-metro)
+### 1단계: Metro 시작하기
 
 먼저 React Native와 함께 제공되는 JavaScript 번들러 인 Metro를 시작해야합니다. Metro는 "입력 파일과 다양한 옵션을 가져 와서 모든 코드와 해당 종속성을 포함하는 단일 JavaScript 파일을 반환합니다."—[Metro Docs](https://facebook.github.io/metro/docs/concepts)
 
@@ -116,7 +117,7 @@ npx react-native start
 
 > 웹 개발에 익숙하다면 Metro는 React Native 앱용 webpack과 매우 유사합니다. Kotlin 또는 Java와 달리 JavaScript는 컴파일되지 않으며 React Native도 아닙니다. 번들링은 컴파일과 동일하지 않지만 시작 성능을 향상시키고 일부 플랫폼 별 JavaScript를 더 광범위하게 지원되는 JavaScript로 변환하는 데 도움이 될 수 있습니다.
 
-### Step 2: Start your application[#](https://reactnative.dev/docs/environment-setup#step-2-start-your-application)
+### 2단계: 애플리케이션 시작하기
 
 Metro Bundler가 자체 터미널에서 실행되도록하십시오. React Native 프로젝트 폴더에서 새 터미널을 엽니다. 다음을 실행하십시오:
 
@@ -130,13 +131,13 @@ npx react-native run-ios
 
 `npx react-native run-ios`는 앱을 실행하는 한 가지 방법입니다. Xcode 내에서 직접 실행할 수도 있습니다.
 
->이 기능이 작동하지 않으면 [Troubleshooting](https://reactnative.dev/docs/troubleshooting#content) 페이지를 참조하세요.
+> 이 기능이 작동하지 않으면 [Troubleshooting](https://reactnative.dev/docs/troubleshooting#content) 페이지를 참조하세요.
 
-### Running on a device[#](https://reactnative.dev/docs/environment-setup#running-on-a-device)
+### 디바이스에서 실행하기
 
 위의 명령은 기본적으로 iOS 시뮬레이터에서 앱을 자동으로 실행합니다. 실제 실제 iOS 기기에서 앱을 실행하려면 [here](https://reactnative.dev/docs/running-on-device) 안내를 따르세요.
 
-### Modifying your app[#](https://reactnative.dev/docs/environment-setup#modifying-your-app)
+### 앱 수정하기
 
 이제 앱을 성공적으로 실행했으므로 수정해 보겠습니다.
 
@@ -144,17 +145,14 @@ npx react-native run-ios
 
 -iOS Simulator에서 `⌘R`를 눌러 리로드하고 변경 사항을 확인하세요!
 
-
-### That's it! [#](https://reactnative.dev/docs/environment-setup#thats-it)
+### 끝!
 
 축하합니다! 첫 번째 React Native 앱을 성공적으로 실행하고 수정했습니다.
 
-
 ![img](https://reactnative.dev/docs/assets/GettingStartedCongratulations.png)
 
-## Now what?[#](https://reactnative.dev/docs/environment-setup#now-what)
+## 이제 무엇을 할까요?
 
 -이 새로운 React Native 코드를 기존 애플리케이션에 추가하려면 [통합 가이드](https://reactnative.dev/docs/integration-with-existing-apps)를 확인하세요.
 
 React Native에 대해 자세히 알고 싶다면 [Introduction to React Native](https://reactnative.dev/docs/getting-started)를 확인하세요.
-
